--- a/AppNet.WinFormUI/AddSale.resx
+++ b/AppNet.WinFormUI/AddSale.resx
@@ -65,12 +65,92 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAXAEAAAJNU0Z0AUkBTAMBAQAB
-        UAEAAVABAAEQAQABEAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAUADAAEQAwABAQEAASAGAAEQ/wAn
-        AAOsAfYU/wNbAcDgACT/2AAs/9AAFP8DXQHFBAAU/wNeAcrMABT/A10BxQQAGP/MABT/A14BygQAGP/M
-        AAz/HAAM/8wADP8DYgHQA2IB0ANTAaUEAANiAdADYgHQA2IB0Az/zAAU/wNdAcUEABj/zAAU/wNdAcUE
-        ABT/A8EB+dAALP/YACT/4AAc//8A/wDSAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAX
+        aAEAAWgBAAEQAQABEAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAUADAAEQAwABAQEAASAGAAEQ/wAn
+        AAObAfYU/wNbAcDgACT/2AAs/9AAFP8DXQHFBAAU/wNdAcrMABT/A10BxQQAGP/MABT/A10BygQAGP/M
+        AAz/HAAM/8wADP8DXwHQA18B0ANTAaUEAANfAdADXwHQA18B0Az/zAAU/wNdAcUEABj/zAAU/wNdAcUE
+        ABT/A7UB+dAALP/YACT/4AAc//8A/wDSAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAX
         AAP/AQAC/wYAAfgBDwYAAfABBwYAAeABAwYAAcABgQYAAcABgQYAAcABgQYAAccB8QYAAcABgQYAAcAB
         gQYAAcABgQYAAeABAwYAAfABBwYAAfgBDwYAAv8GAAL/BgAL
+</value>
+  </data>
+  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notifyIcon1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA1H8qBsycN2DSoDqz06E549SiOvDUoTnd0Z85qc2cN07/AAABAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAMyaOzjWozvb2qY8/9unPP/bpzz/26c8/9unPP/bpzz/2qY8/9Si
+        OsfKnTwiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADSoTxE2aY899yoPv/cqD7/3Kg+/9yoPv/aqkn/3Kg+/9yo
+        Pv/cqD7/3Kg+/9ilPenSnzkoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzZw6GtuoP+7eqj//3qo//96qP//eqj//5cN+//b2
+        9f/gtFn/3qo//96qP//eqj//3qo//9qnPte/nz8IAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADap0Cb36tB/9+rQf/fq0H/36tB/9+r
+        Qf/rzZL/+vr6/+W8af/fq0H/36tB/9+rQf/fq0H/36tB/9qmQXEAAAAAAAAAAAAAAAAAAAAAGbXcOxm2
+        34oat96PGrfejxq33o8at96PGrfejxq33o8at96PGrfejxq33o8at96PJ7XUj9+rQvXhrUP/4a1D/+Gt
+        Q//hrUP/4a1D/+zOkv/6+vr/5r5r/+GtQ//hrUP/4a1D/+GtQ//hrUP/3qtC1gAAAAAAAAAAAAAAABi5
+        4j4awuv8Gsfy/xrH8v8ax/L/Gsfy/xrH8v8ax/L/Gsfy/xrH8v8ax/L/Gsfy/xrH8v9JwMj/4q5E/+Ku
+        RP/irkT/4q5E/+KuRP/irkT/7c+T//r6+v/ov2z/4q5E/+KuRP/irkT/4q5E/+KuRP/irkT+2KU/FAAA
+        AAAAAAAAG8TtlRvI8/8byPP/G8jz/xvI8/8byPP/G8jz/xvI8/8byPP/G8jz/xvI8/8byPP/G8jz/2G/
+        tv/ksEb/5LBG/+SwRv/ksEb/5LBG/+SwRv/t0JT/+vr6/+nAbf/ksEb/5LBG/+SwRv/ksEb/5LBG/+Sw
+        Rv/fqkUwAAAAAAAAAAAbyPObHMn0/xzJ9P8cyfT/HMn0/xzJ9P8cyfT/HMn0/xzJ9P8cyfT/HMn0/xzJ
+        9P8cyfT/XsG7/+aySP/mskj/5rJI/+aySP/mskj/5rJI/+7Qk//6+vr/6sFt/+aySP/mskj/5rJI/+ay
+        SP/mskj/5rJI/+awSCoAAAAAAAAAABvI85sdyvT/Hcr0/x3K9P8dyvT/Hcr0/x3K9P8dyvT/Hcr0/x3K
+        9P8dyvT/Hcr0/x3K9P9BxdX/57NJ/+ezSf/ns0n/57NJ/+ezSf/ns0n/6blZ/+/RlP/ntE3/57NJ/+ez
+        Sf/ns0n/57NJ/+ezSf/ns0n54qo4CQAAAAAAAAAAHcr1mx7K9f8eyvX/Hsr1/x7K9f8eyvX/Hsr1/x7K
+        9f8eyvX/Hsr1/x7K9f8eyvX/Hsr1/x/K9P/Rt1//6bVL/+m1S//ptUv/6bVL/+m1S//pwXD/7uDG/+i5
+        Wf/ptUv/6bVL/+m1S//ptUv/6bVL/+i0SrkAAAAAAAAAAAAAAAAfyvWbH8v1/x/L9f8fy/X/H8v1/x/L
+        9f8fy/X/H8v1/x/L9f8fy/X/H8v1/x/L9f8fy/X/H8v1/3nCq//qtk3/6rZN/+q2Tf/qtk3/6rZN/+7G
+        df/26tH/7L1e/+q2Tf/qtk3/6rZN/+q2Tf/qtk3/6bNLRwAAAAAAAAAAAAAAAB/M9ZsgzPb/IMz2/yDM
+        9v8gzPb/IMz2/yDM9v8gzPb/IMz2/yDM9v8gzPb/IMz2/yDM9v8gzPb/JMvy/8C8c//suE7/7LhO/+y4
+        Tv/suE7/7LhO/+y4Tv/suE7/7LhO/+y4Tv/suE7/7LhO/+y4TqIAAAAAAAAAAAAAAAAAAAAAIMz2myHM
+        9/8hzPf/Icz3/yHM9/8hzPf/Icz3/yHM9/8hzPf/Icz3/yHM9/8hzPf/Icz3/yHM9/8hzPf/M8vo/8e9
+        b//tuVD/7blQ/+25UP/tuVD/7blQ/+25UP/tuVD/7blQ/+25UP/LvW3Z358/CAAAAAAAAAAAAAAAAAAA
+        AAAizfabI833/yPN9/8jzff/I833/yPN9/8jzff/I833/yPN9/8jzff/I833/yPN9/8jzff/I833/yPN
+        9/8jzff/K8zw/5PDnP/ovFf/77tS/++7Uv/vu1L/77tS/++7Uv/ivF3/f8Ws/yXN9MMAAAAAAAAAAAAA
+        AAAAAAAAAAAAACTN+Jskzvj/JM74/yTO+P8kzvj/JM74/yTO+P8kzvj/JM74/yTO+P8kzvj/JM74/yTO
+        +P8kzvj/JM74/yTO+P8kzvj/JM74/zPM6/9wx7r/lcSc/6DDlP+RxJ//Z8jB/yzN8f8kzvj/I834wwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAJM74miXO+P8lzvj/Jc74/yXO+P8lzvj/Jc74/yXO+P8lzvj/Jc74/yXO
+        +P8lzvj/Jc74/yXO+P8lzvj/Jc74/yXO+P8lzvj/Jc74/yXO+P8lzvj/Jc74/yXO+P8lzvj/Jc74/yXO
+        +P8kzvjDAAAAAAAAAAAAAAAAAAAAAAAAAAAiwfJ9Js/5/ybP+f8mz/n/Js/5/ybP+f8mz/n/Js/5/ybP
+        +f8mz/n/Js/5/ybP+f8mz/n/Js/5/ybP+f8mz/n/Js/5/ybP+f8mz/n/Js/5/ybP+f8mz/n/Js/5/ybP
+        +f8mz/n/Js/5/yXO+MMAAAAAAAAAAAAAAAAAAAAAAAAAAKnR6HqI3fL/R9T3/zvM8P86y+//QtP3/0LT
+        9/9C0/f/QNH1/zXH7P8pz/j/J9D6/yfQ+v8n0Pr/J9D6/yfQ+v8n0Pr/J9D6/yfQ+v8n0Pr/J9D6/yfQ
+        +v8n0Pr/J9D6/yfQ+v8n0Pr/J8/5wwAAAAAAAAAAAAAAAAAAAAAAAAAA7Ozszezs7P/r6+v/5ubm/8PD
+        w/+2trb/1tbW/+jo6P/n5+f/1NTU/6m0tv9uv9P/LtH5/yjQ+v8o0Pr/KND6/yjQ+v8o0Pr/KND6/yjQ
+        +v8o0Pr/KND6/yjQ+v8o0Pr/KND6/yjQ+v8n0fnDAAAAAAAAAAAAAAAAAAAAAPDw8Ebu7u7/6+vr/8HB
+        wf/k5OT/6+vr/+np6f/IyMj/tbW1/9HR0f/o6Oj/5+fn/+Tk5P+04Ov/K9H6/ynR+/8p0fv/KdH7/ynR
+        +/8p0fv/KdH7/ynR+/8p0fv/KdH7/ynR+/8p0fv/KdH7/yjR+8MAAAAAAAAAAAAAAAAAAAAA8fHxvu/v
+        7//v7+//5eXl/7+/v/+8vLz/4ODg/+vr6//q6ur/zc3N/7W1tf/Q0ND/6Ojo/+bm5v9/2O7/KtL7/yrS
+        +/8q0vv/KtL7/yrS+/8q0vv/KtL7/yrS+/8q0vv/KtL7/yrS+/8q0vv/KdL7wwAAAAAAAAAAAAAAAPT0
+        9DLx8fH+8fHx//Dw8P/v7+//7+/v/+jo6P/CwsL/ubm5/9/f3//r6+v/6+vr/+Li4v/p6en/09PT/7a6
+        u/9K0/X/K9P8/yvT/P8r0/z/K9P8/yvT/P8r0/z/K9P8/yvT/P8r0/z/K9P8/yvT/P8r0vzDAAAAAAAA
+        AAAAAAAA6OjoF/Hx8a7x8fH98fHx//Hx8f/w8PD/7+/v/+/v7//r6+v/5OTk/+3t7f/s7Oz/6+vr/+rq
+        6v/k5OT/6urq/8fm7v8y1Pz/LNP9/yzT/f8s0/3/LNP9/yzT/f8s0/3/LNP9/yzT/f8s0/3/LNP9/yvT
+        /LoAAAAAAAAAAAAAAAAAAAAAAAAAAPj4+Cjy8vKf8vLy+fHx8f/x8fH/8PDw/+/v7//v7+//49zO/+rp
+        5//t7e3/0tLS/7q6uv+7u7v/z8/P/7nm8f9B1vv/LdT9/y3U/f8t1P3/LdT9/y3U/f8t1P3/LdT9/y3U
+        /f8u1P3/n+P1zQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD29vYd8vLykPLy8vTy8vL/8fHx/+zl
+        1//OoUf/xqBS/9XGqP/o6Oj/7u7u/+7u7v/u7u7/7u7u/+jt7v+w5vP/leL1/47b7v9ywNP/eMbZ/5Th
+        9f+U4vX/luP2/8Xq8//w8PD/8/PzQgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8fHxE/Pz
+        84Hy8vLt3cKL/9Oxbf/dzKn/6+nj//Dw8P/w8PD/8PDw//Dw8P/w8PD/8PDw//Dw8P/w8PD/tbW1/9nZ
+        2f/u7u7/7+/v/+/v7//w8PD/8fHx//Hx8f/x8fGWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPHx8XPt6eH/8fHx//Hx8f/x8fH/8fHx//Hx8f/x8fH/8fHx//Hx8f/x8fH/8fHx//Hx
+        8f/n5+f/7+/v//Dw8P/w8PD/8fHx//Ly8v/y8vLn8vLyeu/v7xAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA8vLyKfHx8Zbz8/OX8/Pzl/Pz85fz8/OX8/Pzl/Pz85fx8fGY8fHx+fHx
+        8f/x8fH/7+/v/+3t7f/w8PD/8fHx//Ly8v/y8vLY8vLyZf///wcAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADv7++h7+/v//Dw8P/w8PD/8fHx//Ly8v/y8vLF8vLyUP///wEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAO7u7i3w8PD+8fHx//Hx8f3z8/Ov9vb2OgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAPHx8ZXx8fGa8fHxJwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///gD///wAf//4AD//8AAf//AAHgAAABwAAAAMAAAADAAAAAwAAAAMAA
+        AAHAAAABwAAAA8AAAAPAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAeAAAAHgAAABwAAAAcAAAAHwAAAB/AA
+        AAP8AAAD/wAAA/8AAA///4A///+B////x/8=
 </value>
   </data>
 </root>
