--- a/AppNet.WinFormUI/PurchasingFrm.resx
+++ b/AppNet.WinFormUI/PurchasingFrm.resx
@@ -57,6 +57,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -65,50 +68,50 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAkg4AAAJNU0Z0AUkBTAIBAQMB
-        AAEQAQABEAEAASgBAAEoAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABoAMAASgDAAEBAQABIAYAAWT/
-        AP8A/wD/AP8AWwADIwEzAz0BZQNEAXIDRQF2A0IBcAM7AWADHAEndAADCwEOAz8BagNZAYsDgwHMA90B
-        /BT/A90B/AOAAccDWAGKAz0BZgMIAQpsAAMwAUsDUgGAA1kBjQN1AbcDjgHYA5YB4gOKAdMDawGpA1gB
-        iQNSAYADJwE5/wAVAAOMAdUk/wNyAbNoAAM4AVw8/wMeASpgAANIAXs0/wM3AVj8AAMJAQwDSwF8A5MB
-        zjT/A3kBuwNCAXAEAVAAAz8BawOaAc1E/wOMAccDPAFjUAADSgF5A/M9/wOQAdoDOwFe9AADrQHzRP8D
-        fgHETAADVwGIHP8DQAFuFAADRQF5HP8DUwGCRAADBgEIVP/oAAM9AWJQ/wPFAfoDLgFFPAADDwEUA2EB
-        mBD/A6YB2QNSAYADHgEqJAADIAEuA1IBgAOtAd4Q/wNcAZADCgENOAADOQFcA6kB2lT/A5QBxgMQARXc
-        AANHAYBc/zwAA2EBmRD/A28B5zwAA5EB9BD/A1wBkDQAAzoBYGT/AxABFdQAA0ABaGT/Ay0BRDAAA1kB
-        ixD/AzgBWEQAAzoBXBD/A1QBgywAAxABFQOwAeBk/wOUAcbUAGj/A78B+SwAA0IBcRD/VAAQ/wM+AWgo
-        AHT/yAADFgEdMP8DKAE7AygBOwMoATsDKAE7AycBOiz/A38BxQQCJAADnwHSDP8DMwFOEAADTAF9AyQB
-        NCQAAwoBDQNZAYwDDgESDAADOgFbDP8DlgHLJAADUQGIdP8DOwFdxAADUgGAMP8UADD/A0IBcCAAA0kB
-        hgz/A1kBuxAAA04BfgT/A6QB7iQAA10BkwT/A2IBmhAAA38B7wz/AzwBZiAAHP8DtQH5WP8DkgHcxAAD
-        sAHiMP8UADD/A30BvRwAAxMBGQz/A50B0BAAA0sBfAPmAf0I/wOgAewDJAE0FAADCgENA18BlAz/A2IB
-        mgMOARIMAAOlAdgM/wMNAREYAANkAZ4g/wQAAxgBIANHAXQDYwGcA8cB80j/AzgBW7wAAyoBQDT/FAA0
-        /xwAA0gBeQz/A1ABfwwAA0IBcRT/A6IB7RQAA10BkxT/A1cBiAwAA1IBgAz/A0IBcBQAAwUBBiT/AwUB
-        BhAATP+8ADj/FAA0/wN2AbgYAANiAZoM/wMUARsQAANEAXMDzQH3EP8DpAHuAyQBNQQAAwoBDQNdAZMU
-        /wNZAY0DCAEKDAADGwElDP8DXAGQFAADRAFvJP8DOwFhFAADjwHCRP8DJgE4tAADFwEfOP8UADj/GAAD
-        owHvDP8YAANEAXMU/wOoAfAEAANdAZMU/wNZAY0YAAz/A5IB3RQAA1UBhCT/A1IBgBgARP8DUgGAtAAD
-        PgFmOP8UADj/AxwBJxQADP8DIAEtHAADQwFyA8wB9xD/A58B7BT/A1kBjQMHAQkYAAMyAU8M/xQAA3YB
-        uCT/A3IBsRwAA5IBxDz/A1cBiLQAA1ABfxz/SAADJwE6HP8DOgFgFAAM/yQAA0QBdCT/A1kBjCQADP8U
-        AAOqAfIo/wMeASoYAAQCPP8DbQGrtAADUgGAHP9IAAMpAT0c/wNCAXAUAAz/KAADRAF0A80B9xj/A1oB
-        jgMHAQkkAAz/FAAw/wM6AVwYAAMGAQgDmgHLNP8DigHTtAADUgGAHP9IAAMpAT0c/wNFAXYUAAz/LAAD
-        XQGSFP8DnwHsLAAM/xQANP8cAAMTARk0/wOWAeK0AANSAYAc/0gAAykBPRz/A0IBcRQADP8kAAMKAQ0D
-        XQGTHP8DqAHwAyQBNSQADP8UADj/AzMBThgAAxoBIwOmAdks/wOOAdi0AANSAYAc/0gAAykBPRz/Az0B
-        ZRQADP8kAANdAZMk/wOjAe8kAAz/FAADxQH6OP8YAAMMAQ8w/wN2Abi0AANCAW44/xQAOP8DJAE0FAAM
-        /wMSARcYAAMKAQ0DXwGUFP8DWQGMA8wB9xD/A6MB7wMkATUYAAMlATcM/xQAA34Bwzz/Ay4BRQwAA0AB
-        aAT/A6wB3QM4AVoDrAHdJP8DWQGNtAADIwEzOP8UADj/GAAD6gH+CP8DcAHqGAADXQGTFP8DWgGOBAAD
-        RAF0FP8DowHvGAAM/wOjAe8UAANaAY5A/wgAAzQBVAj/AycBOgQAAzIBTyT/A1IBgLQABAE4/xQANP8D
-        jgHYGAADawGoDP8DCgENDAADCgENA10BkxT/A1oBjgMHAQkIAANEAXMDzQH3EP8DqgHxAyQBNQwAAxIB
-        Fwz/A2MBmxQAA0gBdUT/A2EBnAT/A6MB1QMkATQIAAMJAQsk/wMwAUu4AANOAZg0/xQANP8cAANSAYAM
-        /wNDAXIMAAMgAS0U/wNaAY4UAANEAXUU/wNIAXkMAANJAXoM/wNLAXwUAAMZASJM/wMZASIMAANdAZMk
-        /8AAA8gB8zD/FAAw/wOVAdAcAAMeASoM/wOBAcEQAAMfASwDowHVCP8DWQGNAwcBCRgAA0QBdQPRAfgE
-        /wPZAfsDSAF5EAADjwHKDP8DGAEgGAADjgHXRP8D6gH+AygBPAQAAxABFQNiAZok/wNJAXvAAANXAYgw
-        /xQAMP8DTgF+IAADuwH6DP8DIQEvEAADHQEpBP8DWQGLJAADRAF0BP8DRwF4EAADPwFsDP8DWQG8IABM
-        /wQAA3EBsij/xAADIQEvMP8UACz/A7MB9QMLAQ4kAAO5AekM/wMpAT0QAAMbASYDBgEHKAADQQFvEAAD
-        LAFCDP8DqQHbJAADaAGidP8DSgF5yAADDwEUbP8sAANSAYAM/wOuAfRUABD/A0wBfSQAAwoBDXT/0AAD
-        WwGbZP8DPQFgLAADBgEHA3IBsQz/A60B8wMpAT1EAAMrAUAD4wH+DP8DaAGkAwIBAygAAzgBWwPVAflk
-        /wOpAdsDBAEF1ABg/wNEAXo4AAOJAdIQ/wMaASQ8AAMrAUEQ/wN+AcQ0AANSAYBk/wM5AV3cAANcAZ1U
-        /wNBAWs8AAMgAS0DjgHXEP8DegG7Az4BaAMFAQYkAAMIAQoDQQFuA4EBwRD/A38BxgMdASg4AANQAX8D
-        0QH4VP8DrAHfAzoBYOQAAw8BFEz/TAADeAG8GP8DVwG0AwYBBxQAAwkBDANfAckY/wNvAa5EAAM4AVpU
-        /wMSARjsAAMhAS8DVwGIA8QB8DT/A6wB3wNSAYADFQEcTAADBwEJA1IBgAO/AexE/wO2AeYDUgGAAwUB
-        BkgAAw0BEQNoAaJE/wNRAYj/AAEAA0kBhyz/AyIBMWQAQP8DjAHyYAADigHTNP8DZwGh/wANAAQCAyMB
-        MgNBAW0DUgGAA1IBgANSAYADUgGAA1ABfwM+AWYDFwEfcAADIgEwA1IBgAN0AbYk/wN0AbQDUgGAAyAB
-        LWgAAxoBIwNIAXUDWgGOA34BwwO/AfkM/wOnAfADdgG3A1UBhQNEAW8DBgEI/wC9AAMbASYDQgFyA00B
+        AAEoAQABKAEAASgBAAEoAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABoAMAASgDAAEBAQABIAYAAWT/
+        AP8A/wD/AP8AWwADIwEzAzwBZQNCAXIDQwF2A0EBcAM6AWADHAEndAADCwEOAz4BagNLAYsDZgHMA9EB
+        /BT/A9EB/ANkAccDSwGKAzwBZgMIAQpsAAMwAUsDRwGAA0sBjQNdAbcDcQHYA3kB4gNsAdMDVQGpA0oB
+        iQNHAYADJwE5/wAVAANvAdUk/wNaAbNoAAM4AVw8/wMeASpgAANEAXs0/wM2AVj8AAMJAQwDRQF8A20B
+        zjT/A14BuwNBAXAEAVAAAz4BawNuAc1E/wNlAccDOwFjUAADRAF5A/M9/wNzAdoDOQFe9AADmgHzRP8D
+        YgHETAADSQGIHP8DQAFuFAADRAF5HP8DRwGCRAADBgEIVP/oAAM7AWJQ/wO2AfoDLQFFPAADDwEUA08B
+        mBD/A3kB2QNHAYADHgEqJAADIAEuA0cBgAODAd4Q/wNMAZADCgENOAADOAFcA30B2lT/A2kBxgMQARXc
+        AANHAYBc/zwAA08BmRD/A2wB5zwAA4cB9BD/A0wBkDQAAzoBYGT/AxABFdQAAz0BaGT/Ay0BRDAAA0sB
+        ixD/AzYBWEQAAzgBXBD/A0gBgywAAxABFQOGAeBk/wNpAcbUAGj/A7UB+SwAA0EBcRD/VAAQ/wM9AWgo
+        AHT/yAADFgEdMP8DKAE7AygBOwMoATsDKAE7AycBOiz/A2MBxQQCJAADcgHSDP8DMQFOEAADRgF9AyQB
+        NCQAAwoBDQNLAYwDDgESDAADOAFbDP8DawHLJAADSQGIdP8DOQFdxAADRwGAMP8UADD/A0EBcCAAA0kB
+        hgz/A1kBuxAAA0YBfgT/A40B7iQAA00BkwT/A1EBmhAAA3UB7wz/AzwBZiAAHP8DrAH5WP8DdgHcxAAD
+        iAHiMP8UADD/A2EBvRwAAxMBGQz/A3EB0BAAA0UBfAPdAf0I/wOJAewDJAE0FAADCgENA04BlAz/A1EB
+        mgMOARIMAAN6AdgM/wMNAREYAANRAZ4g/wQAAxgBIANCAXQDUQGcA60B80j/AzgBW7wAAyoBQDT/FAA0
+        /xwAA0QBeQz/A0YBfwwAA0EBcRT/A4wB7RQAA00BkxT/A0kBiAwAA0cBgAz/A0EBcBQAAwUBBiT/AwUB
+        BhAATP+8ADj/FAA0/wNcAbgYAANRAZoM/wMUARsQAANCAXMDvgH3EP8DjQHuAyQBNQQAAwoBDQNNAZMU
+        /wNLAY0DCAEKDAADGwElDP8DTAGQFAADQAFvJP8DOgFhFAADZAHCRP8DJgE4tAADFwEfOP8UADj/GAAD
+        jgHvDP8YAANCAXMU/wORAfAEAANNAZMU/wNLAY0YAAz/A3UB3RQAA0gBhCT/A0cBgBgARP8DRwGAtAAD
+        PAFmOP8UADj/AxwBJxQADP8DIAEtHAADQgFyA70B9xD/A4gB7BT/A0sBjQMHAQkYAAMyAU8M/xQAA1wB
+        uCT/A1oBsRwAA2cBxDz/A0kBiLQAA0YBfxz/SAADJwE6HP8DOgFgFAAM/yQAA0IBdCT/A0sBjCQADP8U
+        AAOYAfIo/wMeASoYAAQCPP8DVwGrtAADRwGAHP9IAAMpAT0c/wNBAXAUAAz/KAADQgF0A74B9xj/A0wB
+        jgMHAQkkAAz/FAAw/wM4AVwYAAMGAQgDawHLNP8DbAHTtAADRwGAHP9IAAMpAT0c/wNDAXYUAAz/LAAD
+        TQGSFP8DiAHsLAAM/xQANP8cAAMTARk0/wN5AeK0AANHAYAc/0gAAykBPRz/A0EBcRQADP8kAAMKAQ0D
+        TQGTHP8DkQHwAyQBNSQADP8UADj/AzEBThgAAxoBIwN5Adks/wNxAdi0AANHAYAc/0gAAykBPRz/AzwB
+        ZRQADP8kAANNAZMk/wOOAe8kAAz/FAADtgH6OP8YAAMMAQ8w/wNcAbi0AANAAW44/xQAOP8DJAE0FAAM
+        /wMSARcYAAMKAQ0DTgGUFP8DSwGMA70B9xD/A44B7wMkATUYAAMlATcM/xQAA2MBwzz/Ay0BRQwAAz0B
+        aAT/A4AB3QM3AVoDgAHdJP8DSwGNtAADIwEzOP8UADj/GAAD5AH+CP8DagHqGAADTQGTFP8DTAGOBAAD
+        QgF0FP8DjgHvGAAM/wOOAe8UAANMAY5A/wgAAzQBVAj/AycBOgQAAzIBTyT/A0cBgLQABAE4/xQANP8D
+        cQHYGAADVgGoDP8DCgENDAADCgENA00BkxT/A0wBjgMHAQkIAANCAXMDvgH3EP8DlwHxAyQBNQwAAxIB
+        Fwz/A1EBmxQAA0MBdUT/A1EBnAT/A3cB1QMkATQIAAMJAQsk/wMwAUu4AANOAZg0/xQANP8cAANHAYAM
+        /wNCAXIMAAMgAS0U/wNMAY4UAANDAXUU/wNEAXkMAANEAXoM/wNFAXwUAAMZASJM/wMZASIMAANNAZMk
+        /8AAA68B8zD/FAAw/wNuAdAcAAMeASoM/wNiAcEQAAMfASwDdwHVCP8DSwGNAwcBCRgAA0MBdQO/AfgE
+        /wPQAfsDRAF5EAADaQHKDP8DGAEgGAADcAHXRP8D5AH+AygBPAQAAxABFQNRAZok/wNEAXvAAANJAYgw
+        /xQAMP8DRgF+IAADrwH6DP8DIQEvEAADHQEpBP8DSwGLJAADQgF0BP8DRAF4EAADPwFsDP8DWQG8IABM
+        /wQAA1sBsij/xAADIQEvMP8UACz/A6AB9QMLAQ4kAAOTAekM/wMpAT0QAAMbASYDBgEHKAADQAFvEAAD
+        KwFCDP8DfgHbJAADUwGidP8DRAF5yAADDwEUbP8sAANHAYAM/wOcAfRUABD/A0YBfSQAAwoBDXT/0AAD
+        UAGbZP8DOgFgLAADBgEHA1oBsQz/A5oB8wMpAT1EAAMqAUAD3QH+DP8DVAGkAwIBAygAAzgBWwPEAflk
+        /wN+AdsDBAEF1ABg/wNEAXo4AANsAdIQ/wMaASQ8AAMrAUEQ/wNiAcQ0AANHAYBk/wM5AV3cAANRAZ1U
+        /wM+AWs8AAMgAS0DcAHXEP8DXgG7Az0BaAMFAQYkAAMIAQoDQAFuA2IBwRD/A2QBxgMdASg4AANGAX8D
+        vwH4VP8DgQHfAzoBYOQAAw8BFEz/TAADXgG8GP8DVwG0AwYBBxQAAwkBDANfAckY/wNXAa5EAAM3AVpU
+        /wMSARjsAAMhAS8DSQGIA6UB8DT/A4EB3wNHAYADFQEcTAADBwEJA0cBgAOeAexE/wOQAeYDRwGAAwUB
+        BkgAAw0BEQNTAaJE/wNJAYj/AAEAA0kBhyz/AyIBMWQAQP8DgQHyYAADbAHTNP8DUwGh/wANAAQCAyMB
+        MgM/AW0DRwGAA0cBgANHAYADRwGAA0YBfwM8AWYDFwEfcAADIQEwA0cBgANbAbYk/wNaAbQDRwGAAyAB
+        LWgAAxoBIwNDAXUDTAGOA2MBwwO1AfkM/wORAfADXQG3A0kBhQNAAW8DBgEI/wC9AAMbASYDQgFyA00B
         kgM/AWwDGAEh/wD/AP8A/wD/AP8AigABQgFNAT4HAAE+AwABKAMAAaADAAEoAwABAQEAAQEFAAEgAQMW
         AAP/AQAP/wUAD/8FAAL/AYAD/wH4AQABDwL/Af4BAAE/Af8FAAH/Af4BAAE/Av8B8AEAAQcC/wH4AQAB
         DwH/BQAB/wHgAQABAwL/AcABAAEBAv8B4AEAAQMB/wUAAf8B4AEAAQMC/wGAAT4BAAL/AYABAAEBAf8F
