--- a/AppNet.WinFormUI/AddSale.resx
+++ b/AppNet.WinFormUI/AddSale.resx
@@ -65,10 +65,10 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAXAEAAAJNU0Z0AUkBTAMBAQAB
-        aAEAAWgBAAEQAQABEAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAUADAAEQAwABAQEAASAGAAEQ/wAn
-        AAObAfYU/wNbAcDgACT/2AAs/9AAFP8DXQHFBAAU/wNdAcrMABT/A10BxQQAGP/MABT/A10BygQAGP/M
+        cAEAAXABAAEQAQABEAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAUADAAEQAwABAQEAASAGAAEQ/wAn
+        AAOXAfYU/wNbAcDgACT/2AAs/9AAFP8DXQHFBAAU/wNdAcrMABT/A10BxQQAGP/MABT/A10BygQAGP/M
         AAz/HAAM/8wADP8DXwHQA18B0ANTAaUEAANfAdADXwHQA18B0Az/zAAU/wNdAcUEABj/zAAU/wNdAcUE
-        ABT/A7UB+dAALP/YACT/4AAc//8A/wDSAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAX
+        ABT/A7IB+dAALP/YACT/4AAc//8A/wDSAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAX
         AAP/AQAC/wYAAfgBDwYAAfABBwYAAeABAwYAAcABgQYAAcABgQYAAcABgQYAAccB8QYAAcABgQYAAcAB
         gQYAAcABgQYAAeABAwYAAfABBwYAAfgBDwYAAv8GAAL/BgAL
 </value>
@@ -153,4 +153,7 @@
         AAP8AAAD/wAAA/8AAA///4A///+B////x/8=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>84</value>
+  </metadata>
 </root>
